<resources>
    <string name="app_name">TaskPlanner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Welcome</string>
    <string name="log_in_text">Log in</string>
    <string name="create_account_text">Don\'t have an account ? sign in</string>
    <string name="enter_password_text">Enter Password</string>
    <string name="enter_email_hint">Enter Email</string>
    <string name="sign_in_text">Sign in</string>
    <string name="current_projects_text">Current Projects</string>
    <string name="my_projects_text">My Projects</string>
    <string name="create_new_project">Create New Project</string>
    <string name="project_name_hint">Project Name</string>
    <string name="project_description_hint">Project Description</string>
    <string name="todo_state_text">TODO</string>
    <string name="choose_date_text">Choose date</string>
    <string name="create_project_text">Create Project</string>
    <string name="project_time_text">Project time</string>
    <string name="project_ends_in_text">Project Ends In:</string>
    <string name="tasks_text">Tasks</string>
    <string name="enter_name_hint">Enter Name</string>
    <string name="repeat_password_hint">Repeat Password</string>
    <string name="required_text">required</string>
    <string name="create_new_task_text">Create New Task</string>
    <string name="task_name_hint">Task Name</string>
    <string name="task_description_hint">Task Description</string>
    <string name="create_task_text">Create Task</string>
    <string name="enter_job_hint">Enter job</string>
    <string name="task_description_text">Task Description</string>
    <string name="task_time_text">Task Time</string>
    <string name="task_ends_in_text">Task Ends In:</string>
    <string name="in_progress_text">In Progress</string>
    <string name="done_text">Done</string>
    <string name="blank_field_error">Fill the fields</string>
    <string name="password_error_text">The password needs to contain at least one letter and digit</string>
    <string name="passwords_math_error">passwords do not match</string>
    <string name="permission_dialog_title">Permission</string>
    <string name="permission_dialog_message">this permission must be an active</string>
    <string name="permission_dialog_negative_button_text">No</string>
    <string name="permission_dialog_positive_button_text">OK</string>
    <string name="pick_date_error_text">Pick the date</string>
    <string name="finished_timer_text">finish</string>
    <string name="task_create_error_text">Task is not created</string>
    <string name="update_text">update</string>
    <string name="update_task_text">Update Task</string>
    <string name="delete_task_text">Delete Task</string>
    <string name="invalid_date_text">Your date is out of date</string>
    <string name="project_is_done_text">your project is done</string>
    <string name="task_is_done_text">task is done</string>
    <string name="date_picker_dialog_title">Select Date</string>
    <string name="delete_project_text">Delete Project</string>
</resources>