<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_dialog_background"
    android:elevation="@dimen/dimen_5_dp">

    <View
        android:id="@+id/warningView"
        android:layout_width="@dimen/dimen_60_dp"
        android:layout_height="@dimen/dimen_60_dp"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:background="@drawable/ic_warning"
        android:backgroundTint="@color/blue_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_70_dp"
        android:gravity="center"
        android:paddingHorizontal="@dimen/dimen_20_dp"
        android:text="@string/invalid_date_text"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dimen_20_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/warningView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/chooseDateButton"
        android:layout_width="wrap_content"
        android:text="@string/choose_date_text"
        android:textAllCaps="false"
        android:background="@color/blue_700"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dimen_30_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorText"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/dividerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1_dp"
        android:background="@color/blue_700"
        android:layout_marginTop="@dimen/dimen_20_dp"
        app:layout_constraintTop_toBottomOf="@id/chooseDateButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/updateTaskButton"
        android:layout_width="@dimen/dimen_150_dp"
        android:layout_height="@dimen/dimen_60_dp"
        android:background="@color/purple_200"
        android:layout_marginVertical="@dimen/dimen_10_dp"
        android:text="@string/update_task_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/deleteTaskButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deleteTaskButton"
        android:layout_width="@dimen/dimen_150_dp"
        android:layout_height="@dimen/dimen_60_dp"
        android:layout_marginVertical="@dimen/dimen_10_dp"
        android:background="@color/red_200"
        android:text="@string/delete_task_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/updateTaskButton"
        app:layout_constraintTop_toBottomOf="@id/dividerView" />

</androidx.constraintlayout.widget.ConstraintLayout>