<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_200"
    tools:context=".presentation.ui.project.details.ProjectDetailsFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/projectNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_30_dp"
        android:textColor="@color/blue_700"
        android:textSize="@dimen/dimen_20_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Football App" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/projectTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_30_dp"
        android:layout_marginVertical="@dimen/dimen_10_dp"
        android:text="@string/project_time_text"
        android:textColor="@color/blue_700"
        android:textSize="@dimen/dimen_17_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/projectNameTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/projectEndTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_30_dp"
        android:layout_marginVertical="@dimen/dimen_10_dp"
        android:text="@string/project_ends_in_text"
        android:textColor="@color/blue_700"
        android:textSize="@dimen/dimen_17_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/projectTimeTextView" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0_dp"
        android:layout_margin="@dimen/dimen_30_dp"
        android:elevation="@dimen/dimen_2_dp"
        app:cardCornerRadius="@dimen/dimen_5_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/projectEndTimeTextView">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_30_dp"
            android:layout_marginTop="@dimen/dimen_15_dp"
            android:text="@string/tasks_text"
            android:textColor="@color/blue_700"
            android:textSize="@dimen/dimen_20_sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/projectProgressButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="@dimen/dimen_30_dp"
            android:layout_marginTop="@dimen/dimen_5_dp"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/ic_show_item"
            android:drawableTint="@color/blue_500"
            android:paddingHorizontal="@dimen/dimen_15_dp"
            android:text="TODO"
            android:textAllCaps="false"
            android:textColor="@color/blue_500" />

        <ProgressBar
            android:id="@+id/doneStateLoader"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_15_dp"
            android:layout_marginHorizontal="@dimen/dimen_30_dp"
            android:layout_marginTop="@dimen/dimen_60_dp"
            android:progressBackgroundTint="@color/blue_500"
            android:progressTint="@color/green_500" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="@dimen/dimen_30_dp"
            android:layout_marginTop="@dimen/dimen_90_dp"
            android:layout_marginBottom="@dimen/dimen_80_dp" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10_dp"
        android:backgroundTint="@color/blue_700"
        android:src="@drawable/ic_more_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>